# embedded-posts

./: CMakeLists.txt  main.cpp  realloc.cpp  unique_ptr_release.cpp
